# Private-ID

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  generate_cert.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: docker-build.yml  docker-publish.yml
common/: Cargo.toml
common/datagen/: datagen.rs
common/src/: files.rs  gcs_path.rs  lib.rs  metrics.rs  permutations.rs  s3_path.rs  timer.rs  vectors.rs
common/tests/: files_csv_test.rs
crypto/: Cargo.toml
crypto/benches/: cupcake_benchmark.rs  he_benchmark.rs  paillier_benchmark.rs
crypto/src/: cupcake.rs  eccipher.rs  gcd.rs  he.rs  lib.rs  paillier.rs  prelude.rs  prime.rs  random.rs  spoint.rs
etc/example/: email_company.csv  email_partner.csv  generate_cert.sh  input_company.csv  input_partner.csv  pjc_company.csv  pjc_partner.csv
etc/example/cross_psi_xor/: input_company.csv  input_partner.csv
etc/example/dpmc/: Ex0_company.csv  Ex0_partner_1.csv  Ex0_partner_1_features.csv  Ex0_partner_2.csv  Ex0_partner_2_features.csv  Ex1_partner_features.csv  Ex2_partner_features.csv  Ex3_partner.csv  Ex3_partner_features.csv  Ex5_partner.csv  Ex5_partner_features.csv  Ex6_company.csv  Ex6_partner.csv
etc/example/dspmc/: Ex0_partner_1.csv  Ex0_partner_1_features.csv  Ex0_partner_2.csv  Ex0_partner_2_features.csv  Ex1_partner.csv  Ex3_company.csv  Ex4_company.csv  Ex4_partner_features.csv  Ex6_partner_features.csv
etc/example/dummy_certs/: ca.pem  client.key  client.pem  server.key  server.pem
etc/example/private_id_multi_key/: Ex2_company.csv  Ex2_company_output_multi.csv  Ex2_partner.csv  Ex2_partner_output_multi.csv  Ex4_partner.csv
etc/example/suid/Example1/: DataParty1_input.csv  DataParty1_output.txt  DataParty2_input.csv  DataParty3_output.txt
etc/example/suid/Example2/: DataParty1_input.csv  DataParty1_output.txt  DataParty2_input.csv  DataParty3_input.csv  DataParty3_output.txt  DataParty4_input.csv
protocol/: Cargo.toml
protocol-rpc/: Cargo.toml  build.rs
protocol-rpc/proto/: common.proto  crosspsi.proto  crosspsixor.proto  dpmccompany.proto  dpmcpartner.proto  dspmccompany.proto  dspmchelper.proto  dspmcpartner.proto  pjc.proto  privateid.proto  privateidmultikey.proto  suidcreate.proto
protocol-rpc/src/: lib.rs
protocol-rpc/src/connect/: create_client.rs  create_server.rs  mod.rs  tls.rs
protocol-rpc/src/proto/: mod.rs  streaming.rs
protocol-rpc/src/rpc/cross-psi/: client.rs  rpc_client.rs  rpc_server.rs  server.rs
protocol-rpc/src/rpc/cross-psi-xor/: client.rs  rpc_client.rs  rpc_server.rs  server.rs
protocol-rpc/src/rpc/dpmc/: client.rs  company-server.rs  partner-server.rs  rpc_client_company.rs  rpc_client_partner.rs  rpc_server_company.rs  rpc_server_partner.rs
protocol-rpc/src/rpc/dspmc/: client.rs  company-server.rs  helper-server.rs  partner-server.rs  rpc_client_company.rs  rpc_client_helper.rs  rpc_client_partner.rs  rpc_server_company.rs  rpc_server_helper.rs  rpc_server_partner.rs
protocol-rpc/src/rpc/pjc/: client.rs  rpc_client.rs  rpc_server.rs  server.rs
protocol-rpc/src/rpc/private-id/: client.rs  rpc_client.rs  rpc_server.rs  server.rs
protocol-rpc/src/rpc/private-id-multi-key/: client.rs  rpc_client.rs  rpc_server.rs  server.rs
protocol-rpc/src/rpc/private-id/rpc_server/: metrics.rs
protocol-rpc/src/rpc/suid-create/: client.rs  rpc_client.rs  rpc_server.rs  server.rs
protocol/src/: fileio.rs  lib.rs
protocol/src/cross_psi/: company.rs  partner.rs  traits.rs
protocol/src/cross_psi_xor/: company.rs  mod.rs  partner.rs  traits.rs
protocol/src/dpmc/: company.rs  helper.rs  mod.rs  partner.rs  traits.rs
protocol/src/dspmc/: company.rs  helper.rs  mod.rs  partner.rs  shuffler.rs  traits.rs
protocol/src/pjc/: company.rs  partner.rs  traits.rs
protocol/src/private_id/: company.rs  mod.rs  partner.rs  traits.rs
protocol/src/private_id_multi_key/: company.rs  mod.rs  partner.rs  traits.rs
protocol/src/suid_create/: merger.rs  mod.rs  sharer.rs  traits.rs
protocol/tests/: fileio.rs  keyed_ints.csv
