# Copyright (c) Facebook, Inc. and its affiliates.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "common"
version = "0.1.0"
authors = ["Facebook Inc"]
edition = "2021"

[[bin]]
name = "datagen"
path = "datagen/datagen.rs"


[dependencies]
log = "0.4"
env_logger = "0.7.1"
rayon = "1.3.0"
clap = "2.33.0"
csv = "1.1.1"
rand = { version = "0.8", features = ["small_rng"] }
indicatif = "0.13.0"
hex = "0.3.0"
serde = {version = "1.0.104", features = ["derive"] }
num = "0.2.1"
wasm-timer = "0.2.5"
aws-config = "0.8.0"
aws-sdk-s3 = "0.8.0"
lazy_static = "1.4.0"
regex = "1.5.4"
tempfile = "3.2.0"
thiserror = "1.0.25"
tokio = { version = "1", features = ["full"] }
cloud-storage = "0.10"
tokio-util = { version = "0.6.9", features = ["codec"] }
serde_json = "1.0"
