# Copyright (c) Facebook, Inc. and its affiliates.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "common"
version = "0.1.0"
authors = ["Facebook Inc"]
edition = "2021"

[[bin]]
name = "datagen"
path = "datagen/datagen.rs"


[dependencies]
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-s3 = "0.34.0"
aws-smithy-http = "0.56.0"
clap = "2.33.0"
cloud-storage = "0.10"
csv = "1.1.1"
env_logger = "0.7.1"
hex = "0.3.0"
indicatif = "0.13.0"
lazy_static = "1.4.0"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.8.0"
regex = "1.5.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"
thiserror = "1.0.25"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
