# Copyright (c) Facebook, Inc. and its affiliates.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "crypto"
version = "0.1.0"
authors = ["Facebook Inc"]
edition = "2021"

[features]
avx2 = ["curve25519-dalek/simd_backend"]

[dependencies]
log = "0.4"
env_logger = "0.7.1"
sha2 = "0.9.0"
hex = "0.4.0"
rand = "0.8"
rand_core = "0.5.1"
curve25519-dalek = "3.2"
Cupcake = { git = "https://github.com/facebookresearch/Cupcake"}
rayon = "1.3.0"
serde = {version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "paillier_benchmark"
harness = false

[[bench]]
name = "cupcake_benchmark"
harness = false
