# Copyright (c) Facebook, Inc. and its affiliates.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "protocol-rpc"
version = "0.1.0"
authors = ["Facebook Inc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cross-psi-server"
path = "src/rpc/cross-psi/server.rs"

[[bin]]
name = "cross-psi-client"
path = "src/rpc/cross-psi/client.rs"

[[bin]]
name = "cross-psi-xor-server"
path = "src/rpc/cross-psi-xor/server.rs"

[[bin]]
name = "cross-psi-xor-client"
path = "src/rpc/cross-psi-xor/client.rs"

[[bin]]
name = "private-id-server"
path = "src/rpc/private-id/server.rs"

[[bin]]
name = "private-id-client"
path = "src/rpc/private-id/client.rs"

[[bin]]
name = "private-id-multi-key-server"
path = "src/rpc/private-id-multi-key/server.rs"

[[bin]]
name = "private-id-multi-key-client"
path = "src/rpc/private-id-multi-key/client.rs"

[[bin]]
name = "pjc-server"
path = "src/rpc/pjc/server.rs"

[[bin]]
name = "pjc-client"
path = "src/rpc/pjc/client.rs"

[[bin]]
name = "suid-create-server"
path = "src/rpc/suid-create/server.rs"

[[bin]]
name = "suid-create-client"
path = "src/rpc/suid-create/client.rs"

[[bin]]
name = "dpmc-company-server"
path = "src/rpc/dpmc/company-server.rs"

[[bin]]
name = "dpmc-partner-server"
path = "src/rpc/dpmc/partner-server.rs"

[[bin]]
name = "dpmc-helper"
path = "src/rpc/dpmc/client.rs"

[[bin]]
name = "dspmc-company-server"
path = "src/rpc/dspmc/company-server.rs"

[[bin]]
name = "dspmc-helper-server"
path = "src/rpc/dspmc/helper-server.rs"

[[bin]]
name = "dspmc-partner-server"
path = "src/rpc/dspmc/partner-server.rs"

[[bin]]
name = "dspmc-shuffler"
path = "src/rpc/dspmc/client.rs"

[lib]
name = "rpc"
path = "src/lib.rs"

[dependencies]
common = {path = "../common", version = "0.1.0"}
crypto = {path = "../crypto", version = "0.1.0"}
protocol = {path = "../protocol", version = "0.1.0"}

async-stream = "0.2"
bytes = "0.4"
clap = "2.33.4"
csv = "1.1.1"
ctrlc = "3.2.3"
env_logger = "0.7.1"
futures =  { version = "0.3", features = ["thread-pool", "alloc"]}
http = "0.2"
itertools = "0.9.0"
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
prost = "0.10"
rayon = "1.8.0"
rcgen = "0.10.0"
retry = "0.5.1"
tempfile = "3.2.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1.8", features = ["net"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots", "prost"]}
tower = { version = "0.4.12" }
url = "2.1.0"

[build-dependencies]
tonic-build = { version = "0.7.2" }
