# Copyright (c) Facebook, Inc. and its affiliates.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "protocol"
version = "0.1.0"
authors = ["Facebook Inc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common", version = "0.1.0"}
crypto = {path = "../crypto", version = "0.1.0"}
serde_json = "1.0"

log = "0.4"
env_logger = "0.7.1"
csv = "1.1.1"
itertools = "0.9.0"
rand = "0.8"
rand_core = "0.5.1"
hex = "0.4.2"
rayon = "1.3.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
zeroize = "1.5.5"
tempfile = "3.2.0"
mockall = "0.10.2"
