# Copyright (c) Facebook, Inc. and its affiliates.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "protocol"
version = "0.1.0"
authors = ["Facebook Inc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common", version = "0.1.0"}
crypto = {path = "../crypto", version = "0.1.0"}

base64 = "0.21.7"
csv = "1.1.1"
fernet = "0.2.1"
hex = "0.4.2"
itertools = "0.9.0"
log = "0.4"
mockall = "0.10.2"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
rand_core = "0.6"
rayon = "1.8.0"
serde_json = "1.0"
tempfile = "3.2.0"
zeroize = "1.5.5"
